<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/profileName"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="Profile Name"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imgBtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@android:drawable/ic_menu_delete"
        android:fontFamily="@font/montserrat_bold"
        android:text="delete"
        android:textColor="@color/colorWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#F8CEC9C9"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnDelete">

        <TextView
            android:id="@+id/sensor"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/min"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Min"
            android:textAlignment="center"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/max"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Max"
            android:textAlignment="center"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EECFCCCC"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/profileTemp"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Temperature"
            android:textAlignment="textStart"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileTempMin"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="Min"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileTempMax"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="max"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EECFCCCC"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/profileCo2"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Co2"
            android:textAlignment="textStart"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileCo2Min"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="Min"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileCo2Max"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="max"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EECFCCCC"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/profileLight"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Light"
            android:textAlignment="textStart"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileLightMin"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="Min"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileLightMax"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="max"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EECFCCCC"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/profileHumidity"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_weight="2"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat_bold"
            android:text="Humidity"
            android:textAlignment="textStart"
            android:textColor="@color/color2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileHumidityMin"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="Min"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileHumidityMax"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_marginTop="0.25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/montserrat"
            android:text="max"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"

        android:clickable="true"
        app:backgroundTint="@color/colorBackground"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/edit_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>